--- a/esemenyek.html
+++ b/esemenyek.html
@@ -14,12 +14,12 @@
 
     <nav class="navbar">
         <ul class="nav-links">
-          <li><a href="../html/index.html">Kezdőlap</a></li>
-          <li><a href="../html/esemenyek.html" class="active">Események</a></li>
-          <li><a href="../html/helyszinek.html">Helyszínek</a></li>
-          <li><a href="../html/jegyek.html">Jegyek</a></li>
-          <li><a href="../html/rolunk.html">Rólunk</a></li>
-          <li><a href="../html/dolgozzvelunk.html">Dolgozz velünk</a></li>
+          <li><a href="index.html">Kezdőlap</a></li>
+          <li><a href="esemenyek.html" class="active">Események</a></li>
+          <li><a href="helyszinek.html">Helyszínek</a></li>
+          <li><a href="jegyek.html">Jegyek</a></li>
+          <li><a href="rolunk.html">Rólunk</a></li>
+          <li><a href="dolgozzvelunk.html">Dolgozz velünk</a></li>
         </ul>
     </nav>
     
